--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,18 +70,18 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/testYellow
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Levels/Blue_paint
-MRUItem4=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem5=/Game/Levels/RedTesting
-MRUItem6=/Game/Levels/TechDemo
-MRUItem7=/Game/Levels/testRed
-MRUItem8=/Game/Levels/testMagenta
-MRUItem9=/Game/Levels/testGreen
-MRUItem10=/Game/Levels/Starting_Area
-MRUItem11=/Game/Levels/NewWorld
+MRUItem0=/Game/Levels/testYellow
+MRUItem1=/Game/Levels/Splash_screen
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem4=/Game/Levels/Blue_paint
+MRUItem5=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem6=/Game/Levels/RedTesting
+MRUItem7=/Game/Levels/TechDemo
+MRUItem8=/Game/Levels/testRed
+MRUItem9=/Game/Levels/testMagenta
+MRUItem10=/Game/Levels/testGreen
+MRUItem11=/Game/Levels/Starting_Area
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
@@ -228,6 +228,7 @@ Door4_BluePrint_C=
 StreetlampBP_C=
 TestLevels_C=
 LightPickupActor_Blueprint_C=
+Splash_screen_C=
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -258,7 +259,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3/SoapHouse3V1
 ContentBrowserTab1.SelectedPaths=/Game/Stairs/Stair_Textures
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/UI
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 None=======
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -301,7 +302,7 @@ LastLevel=/Game/Levels/Forest
 LastLevel=/Game/Levels/MainMenu
 LastLevel=/Game/Levels/TowerInterior
 LastLevel=/Game/Levels/MainMenu
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/testYellow
 None=======
 None=======
 None=======
@@ -310,26 +311,26 @@ None=======
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/UI/Pause
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Blueprints/UI/HUD7
-MRUItem3=/Game/Blueprints/UI/HUD6
-MRUItem4=/Game/Blueprints/UI/HUD5
-MRUItem5=/Game/Blueprints/UI/HUD4
-MRUItem6=/Game/Blueprints/UI/HUD3
-MRUItem7=/Game/Blueprints/UI/HUD
-MRUItem8=/Game/Blueprints/UI/HUD2
-MRUItem9=/Game/Levels/testYellow
-MRUItem10=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem11=/Game/Blueprints/AOE_Decal
-MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem13=/Game/Blueprints/AO1E
-MRUItem14=/Game/Blueprints/LightPickupActor_Blueprint
-MRUItem15=/Game/Blueprints/AOE_Decal1
-MRUItem16=/Game/Blueprints/Mechanic_Test
-MRUItem17=/Game/Blueprints/UI/MainMenu
-MRUItem18=/Game/Levels/Bubbleopolis
-MRUItem19=/Game/Levels/Blue_paint
+MRUItem0=/Game/Levels/testYellow
+MRUItem1=/Game/Levels/Splash_screen
+MRUItem2=/Game/Blueprints/UI/Splash_screen
+MRUItem3=/Game/Blueprints/UI/Pause
+MRUItem4=/Game/Levels/Forest
+MRUItem5=/Game/Blueprints/UI/HUD7
+MRUItem6=/Game/Blueprints/UI/HUD6
+MRUItem7=/Game/Blueprints/UI/HUD5
+MRUItem8=/Game/Blueprints/UI/HUD4
+MRUItem9=/Game/Blueprints/UI/HUD3
+MRUItem10=/Game/Blueprints/UI/HUD
+MRUItem11=/Game/Blueprints/UI/HUD2
+MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem13=/Game/Blueprints/AOE_Decal
+MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem15=/Game/Blueprints/AO1E
+MRUItem16=/Game/Blueprints/LightPickupActor_Blueprint
+MRUItem17=/Game/Blueprints/AOE_Decal1
+MRUItem18=/Game/Blueprints/Mechanic_Test
+MRUItem19=/Game/Blueprints/UI/MainMenu
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -2912,6 +2913,10 @@ PanelWidget.Performance=True
 PanelWidget.Clipping=True
 PanelWidget.Navigation=True
 PanelWidget.Localization=True
+Splash_screen_C.Tick=True
+Splash_screen_C.Replication=True
+Splash_screen_C.Input=True
+Splash_screen_C.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2932,7 +2937,7 @@ ActorComponent=
 ActorComponent=
 Object=
 Object=
-Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 None=======
 None=======
 None=======
@@ -3017,8 +3022,8 @@ Mush_Gnome_C=
 Winter_Gnome_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[20]\" "
 ProjectileMovementComponent=
 MovementComponent=
@@ -3446,6 +3451,8 @@ None=======
 /Game/Blueprints/UI/HUD5.HUD5=0
 /Game/Blueprints/UI/HUD6.HUD6=0
 /Game/Blueprints/UI/HUD7.HUD7=0
+/Game/Blueprints/UI/Splash_screen.Splash_screen=0
+/Game/Levels/Splash_screen.Splash_screen:PersistentLevel.Splash_screen=0
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
