--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -125,6 +125,8 @@ SelectedSplinePointSizeAdjustment=0.000000
 SplineLineThicknessAdjustment=0.000000
 SplineTangentHandleSizeAdjustment=0.000000
 SplineTangentScale=1.000000
+CameraSpeed=3
+CurrentPosGridSize=1
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -139,7 +141,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -165,32 +167,32 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/NewWorld
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Blueprints/AOE/Splatter/AOE_Decal
-MRUItem5=/Game/Levels/TechDemo
-MRUItem6=/Game/Levels/RedTesting
-MRUItem7=/Game/Levels/Magenta_Test_Room
-MRUItem8=/Game/Levels/Green_Paint
-MRUItem9=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem10=/Game/Levels/Bubbleopolis
-MRUItem11=/Game/Materials/Mat_CloudDeck
-MRUItem12=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
-MRUItem13=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_R
-MRUItem14=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_L
-MRUItem15=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Gate_opening
-MRUItem16=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Pillars
-MRUItem17=/Game/Drawbridge/Drawbridge_Blueprint
-MRUItem18=/Game/Blueprints/Testing/disappear_cube_blueprint
-MRUItem19=/Game/Bridge/Blueprints/DisappearBridge3
+MRUItem0=/Game/Levels/NewWorld
+MRUItem1=/Game/Levels/NewMap
+MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem3=/Game/Levels/Forest
+MRUItem4=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem5=/Game/Levels/MainMenu
+MRUItem6=/Game/Blueprints/AOE/Splatter/AOE_Decal
+MRUItem7=/Game/Levels/TechDemo
+MRUItem8=/Game/Levels/RedTesting
+MRUItem9=/Game/Levels/Magenta_Test_Room
+MRUItem10=/Game/Levels/Green_Paint
+MRUItem11=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem12=/Game/Levels/Bubbleopolis
+MRUItem13=/Game/Materials/Mat_CloudDeck
+MRUItem14=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
+MRUItem15=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_R
+MRUItem16=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_L
+MRUItem17=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Gate_opening
+MRUItem18=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Pillars
+MRUItem19=/Game/Drawbridge/Drawbridge_Blueprint
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1068,16 +1070,20 @@ ThirdPersonCharacter_C.NavMovement=True
 ThirdPersonCharacter_C.Velocity=True
 ThirdPersonCharacter_C.PlanarMovement=True
 ThirdPersonCharacter_C.MovementComponent=True
+DirectionalLight.AtmosphereAndCloud=True
+SkyLight.AtmosphereAndCloud=True
+GeomModifier_Pen.Settings=True
+StaticMeshActor.Navigation=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Settings\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 Character="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 Pawn="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
-Info=
+Info="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 ProjectPackagingSettings="\"Object.Packaging.IniKeyBlacklist\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Compiler.DefaultCompilerOptions\" \"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
@@ -1116,6 +1122,7 @@ PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+GeomModifier_Pen="\"Object.Settings\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -1250,7 +1257,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=571.500 Y=0.000
-WindowSize=X=1315.000 Y=755.000
+WindowSize=X=1320.000 Y=760.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1267,7 +1274,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/ihatethis/Serotopia/Serotopia_Grey_1/Content/Levels
+UNR=D:/ihatethis/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBXAnim=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -2125,18 +2132,18 @@ GooglePADEditor.TimeStamp=2021.02.05-04.40.07
 GooglePADEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/TechDemo
-MRUItem4=/Game/Levels/RedTesting
-MRUItem5=/Game/Levels/Magenta_Test_Room
-MRUItem6=/Game/Levels/Green_Paint
-MRUItem7=/Game/Levels/Bubbleopolis
-MRUItem8=/Game/Levels/Blue_paint
-MRUItem9=/Game/Levels/Blue_Paint_Test_Room
-MRUItem10=/Game/Levels/NewWorld
-MRUItem11=/Game/Levels/NewMap
+MRUItem0=/Game/Levels/NewWorld
+MRUItem1=/Game/Levels/NewMap
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem4=/Game/Levels/MainMenu
+MRUItem5=/Game/Levels/TechDemo
+MRUItem6=/Game/Levels/RedTesting
+MRUItem7=/Game/Levels/Magenta_Test_Room
+MRUItem8=/Game/Levels/Green_Paint
+MRUItem9=/Game/Levels/Bubbleopolis
+MRUItem10=/Game/Levels/Blue_paint
+MRUItem11=/Game/Levels/Blue_Paint_Test_Room
 
 [MessageLog]
 LastLogListing=PIE
@@ -2303,8 +2310,16 @@ BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/BuildingSpike.BuildingSpike;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Rough.M_CobbleStone_Rough;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Cut_Stone.M_Brick_Cut_Stone;
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Bubbleopolis/Current/CombinedMesh/BubsLandIDMap.BubsLandIDMap;
 
 [DetailCategoriesAdvanced]
@@ -2316,9 +2331,6 @@ BoxComponent.Collision=True
 disappear_cube_blueprint_C.Collision=False
 PostProcessVolume.Mobile Tonemapper=False
 DisappearBridge1_C.Collision=False
-
-[FEditorModeTools]
-CoordSystem=1
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
