--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -121,7 +121,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Audio/SFX/Wavs
+ContentBrowserTab1.SelectedPaths=/Game/Audio/Music/Wavs
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -152,26 +152,26 @@ LastLevel=/Game/Levels/MainMenu
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Meshes/MonkeyBars/MonkeyBars
-MRUItem1=/Game/Geometry/Meshes/MonkeyBars/Monkeybar
-MRUItem2=/Game/Geometry/Meshes/MonkeyBars/ArcSupport
-MRUItem3=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
-MRUItem4=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
-MRUItem5=/Game/Geometry/Meshes/Plants/Flower
-MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem7=/Game/Levels/Forest
-MRUItem8=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem9=/Game/Levels/MainMenu
-MRUItem10=/Game/Blueprints/AOE/Splatter/AOE_Decal
-MRUItem11=/Game/Levels/TechDemo
-MRUItem12=/Game/Levels/RedTesting
-MRUItem13=/Game/Levels/Magenta_Test_Room
-MRUItem14=/Game/Levels/Green_Paint
-MRUItem15=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem16=/Game/Levels/Bubbleopolis
-MRUItem17=/Game/Materials/Mat_CloudDeck
-MRUItem18=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
-MRUItem19=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_R
+MRUItem0=/Game/Audio/Music/Cues/BGM_Forest_Return_Theme_Cue
+MRUItem1=/Game/Geometry/Meshes/MonkeyBars/MonkeyBars
+MRUItem2=/Game/Geometry/Meshes/MonkeyBars/Monkeybar
+MRUItem3=/Game/Geometry/Meshes/MonkeyBars/ArcSupport
+MRUItem4=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
+MRUItem5=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
+MRUItem6=/Game/Geometry/Meshes/Plants/Flower
+MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem8=/Game/Levels/Forest
+MRUItem9=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem10=/Game/Levels/MainMenu
+MRUItem11=/Game/Blueprints/AOE/Splatter/AOE_Decal
+MRUItem12=/Game/Levels/TechDemo
+MRUItem13=/Game/Levels/RedTesting
+MRUItem14=/Game/Levels/Magenta_Test_Room
+MRUItem15=/Game/Levels/Green_Paint
+MRUItem16=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem17=/Game/Levels/Bubbleopolis
+MRUItem18=/Game/Materials/Mat_CloudDeck
+MRUItem19=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1062,6 +1062,7 @@ MaterialExpressionConstant.MaterialExpression=True
 MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
+SoundNodeWavePlayer.WavePlayer=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -1186,6 +1187,7 @@ TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 /Game/Geometry/Meshes/Plants/Flower.Flower=1
 /Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst.DualFlowers_Inst=1
 /Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers.DualFlowers=1
+/Game/Audio/Music/Cues/BGM_Forest_Return_Theme_Cue.BGM_Forest_Return_Theme_Cue=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
