--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -121,7 +121,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Audio/Music/Wavs
+ContentBrowserTab1.SelectedPaths=/Game/Geometry
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -152,26 +152,26 @@ LastLevel=/Game/Levels/MainMenu
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Audio/Music/Cues/BGM_Forest_Return_Theme_Cue
-MRUItem1=/Game/Geometry/Meshes/MonkeyBars/MonkeyBars
-MRUItem2=/Game/Geometry/Meshes/MonkeyBars/Monkeybar
-MRUItem3=/Game/Geometry/Meshes/MonkeyBars/ArcSupport
-MRUItem4=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
-MRUItem5=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
-MRUItem6=/Game/Geometry/Meshes/Plants/Flower
-MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem8=/Game/Levels/Forest
-MRUItem9=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem10=/Game/Levels/MainMenu
-MRUItem11=/Game/Blueprints/AOE/Splatter/AOE_Decal
-MRUItem12=/Game/Levels/TechDemo
-MRUItem13=/Game/Levels/RedTesting
-MRUItem14=/Game/Levels/Magenta_Test_Room
-MRUItem15=/Game/Levels/Green_Paint
-MRUItem16=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem17=/Game/Levels/Bubbleopolis
-MRUItem18=/Game/Materials/Mat_CloudDeck
-MRUItem19=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
+MRUItem0=/Game/Geometry/Meshes/Monkey_Bars/Monkey_Bars
+MRUItem1=/Game/Geometry/Meshes/Watering_Can_House/Watering_Can_House_LP
+MRUItem2=/Game/Geometry/Meshes/Watering_Can_House/Wood
+MRUItem3=/Game/BubbleWands/Wand_Bunch
+MRUItem4=/Game/Geometry/Meshes/BubbleWands/Wand_Diamond
+MRUItem5=/Game/Geometry/Meshes/BubbleWands/Wand_Flower
+MRUItem6=/Game/Geometry/Meshes/BubbleWands/Wand_Butterfly
+MRUItem7=/Game/Geometry/Meshes/BubbleWands/Wand_Fractal
+MRUItem8=/Game/PrincessTextures/Princess
+MRUItem9=/Game/Audio/Music/Cues/BGM_Forest_Return_Theme_Cue
+MRUItem10=/Game/Geometry/Meshes/MonkeyBars/MonkeyBars
+MRUItem11=/Game/Geometry/Meshes/MonkeyBars/Monkeybar
+MRUItem12=/Game/Geometry/Meshes/MonkeyBars/ArcSupport
+MRUItem13=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
+MRUItem14=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
+MRUItem15=/Game/Geometry/Meshes/Plants/Flower
+MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem17=/Game/Levels/Forest
+MRUItem18=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem19=/Game/Levels/MainMenu
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1188,6 +1188,15 @@ TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 /Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst.DualFlowers_Inst=1
 /Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers.DualFlowers=1
 /Game/Audio/Music/Cues/BGM_Forest_Return_Theme_Cue.BGM_Forest_Return_Theme_Cue=1
+/Game/PrincessTextures/Princess.Princess=1
+/Game/Geometry/Meshes/BubbleWands/Wand_Fractal.Wand_Fractal=1
+/Game/Geometry/Meshes/BubbleWands/Wand_Butterfly.Wand_Butterfly=1
+/Game/Geometry/Meshes/BubbleWands/Wand_Flower.Wand_Flower=1
+/Game/Geometry/Meshes/BubbleWands/Wand_Diamond.Wand_Diamond=1
+/Game/BubbleWands/Wand_Bunch.Wand_Bunch=1
+/Game/Geometry/Meshes/Watering_Can_House/Wood.Wood=1
+/Game/Geometry/Meshes/Watering_Can_House/Watering_Can_House_LP.Watering_Can_House_LP=1
+/Game/Geometry/Meshes/Monkey_Bars/Monkey_Bars.Monkey_Bars=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2014,7 +2023,7 @@ MRUItem10=/Game/Levels/NewWorld
 MRUItem11=/Game/Levels/NewMap
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
