--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -121,7 +121,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Geometry
+ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -146,32 +146,32 @@ ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Forest
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Meshes/Monkey_Bars/Monkey_Bars
-MRUItem1=/Game/Geometry/Meshes/Watering_Can_House/Watering_Can_House_LP
-MRUItem2=/Game/Geometry/Meshes/Watering_Can_House/Wood
-MRUItem3=/Game/BubbleWands/Wand_Bunch
-MRUItem4=/Game/Geometry/Meshes/BubbleWands/Wand_Diamond
-MRUItem5=/Game/Geometry/Meshes/BubbleWands/Wand_Flower
-MRUItem6=/Game/Geometry/Meshes/BubbleWands/Wand_Butterfly
-MRUItem7=/Game/Geometry/Meshes/BubbleWands/Wand_Fractal
-MRUItem8=/Game/PrincessTextures/Princess
-MRUItem9=/Game/Audio/Music/Cues/BGM_Forest_Return_Theme_Cue
-MRUItem10=/Game/Geometry/Meshes/MonkeyBars/MonkeyBars
-MRUItem11=/Game/Geometry/Meshes/MonkeyBars/Monkeybar
-MRUItem12=/Game/Geometry/Meshes/MonkeyBars/ArcSupport
-MRUItem13=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
-MRUItem14=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
-MRUItem15=/Game/Geometry/Meshes/Plants/Flower
-MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem17=/Game/Levels/Forest
-MRUItem18=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem19=/Game/Levels/MainMenu
+MRUItem0=/Game/Blueprints/UI/Widgets/Pause
+MRUItem1=/Game/Blueprints/UI/Widgets/NewWidgetBlueprint
+MRUItem2=/Game/Blueprints/UI/Widgets/TestLevels
+MRUItem3=/Game/Blueprints/UI/Widgets/Settings
+MRUItem4=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem5=/Game/Blueprints/UI/Widgets/HUD
+MRUItem6=/Game/Blueprints/UI/Widgets/CrosshairWid
+MRUItem7=/Game/Levels/Forest
+MRUItem8=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem9=/Game/Geometry/Meshes/Tapestry/Rack
+MRUItem10=/Game/Geometry/Meshes/Tapestry/Tapestry_LP
+MRUItem11=/Game/Geometry/Meshes/Monkey_Bars/Monkey_Bars
+MRUItem12=/Game/Geometry/Meshes/Watering_Can_House/Watering_Can_House_LP
+MRUItem13=/Game/Geometry/Meshes/Watering_Can_House/Wood
+MRUItem14=/Game/BubbleWands/Wand_Bunch
+MRUItem15=/Game/Geometry/Meshes/BubbleWands/Wand_Diamond
+MRUItem16=/Game/Geometry/Meshes/BubbleWands/Wand_Flower
+MRUItem17=/Game/Geometry/Meshes/BubbleWands/Wand_Butterfly
+MRUItem18=/Game/Geometry/Meshes/BubbleWands/Wand_Fractal
+MRUItem19=/Game/PrincessTextures/Princess
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1063,6 +1063,10 @@ MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
 SoundNodeWavePlayer.WavePlayer=True
+SphereComponent.Variable=True
+SphereComponent.Sockets=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Events=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -1106,7 +1110,7 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -1197,6 +1201,8 @@ TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 /Game/Geometry/Meshes/Watering_Can_House/Wood.Wood=1
 /Game/Geometry/Meshes/Watering_Can_House/Watering_Can_House_LP.Watering_Can_House_LP=1
 /Game/Geometry/Meshes/Monkey_Bars/Monkey_Bars.Monkey_Bars=1
+/Game/Geometry/Meshes/Tapestry/Rack.Rack=1
+/Game/Geometry/Meshes/Tapestry/Tapestry_LP.Tapestry_LP=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1277,7 +1283,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/ihatethis/Serotopia/Serotopia_Grey_1/Content/Levels
+UNR=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/Levels
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBXAnim=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -2023,7 +2029,7 @@ MRUItem10=/Game/Levels/NewWorld
 MRUItem11=/Game/Levels/NewMap
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
