Adding redo of crosshair and splash screen
Updated some UI bits

--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,8 +70,8 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [MRU]
-MRUItem0=/Game/Levels/testYellow
-MRUItem1=/Game/Levels/Splash_screen
+MRUItem0=/Game/Levels/Splash_screen
+MRUItem1=/Game/Levels/testYellow
 MRUItem2=/Game/Levels/Forest
 MRUItem3=/Game/Levels/Bubbleopolis
 MRUItem4=/Game/Levels/Blue_paint
@@ -259,7 +259,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3/SoapHouse3V1
 ContentBrowserTab1.SelectedPaths=/Game/Stairs/Stair_Textures
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/UI
 None=======
 None=======
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -302,7 +302,7 @@ LastLevel=/Game/Levels/Forest
 LastLevel=/Game/Levels/MainMenu
 LastLevel=/Game/Levels/TowerInterior
 LastLevel=/Game/Levels/MainMenu
-LastLevel=/Game/Levels/testYellow
+LastLevel=/Game/Levels/Splash_screen
 None=======
 None=======
 None=======
@@ -311,26 +311,26 @@ None=======
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/testYellow
-MRUItem1=/Game/Levels/Splash_screen
-MRUItem2=/Game/Blueprints/UI/Splash_screen
-MRUItem3=/Game/Blueprints/UI/Pause
-MRUItem4=/Game/Levels/Forest
-MRUItem5=/Game/Blueprints/UI/HUD7
-MRUItem6=/Game/Blueprints/UI/HUD6
-MRUItem7=/Game/Blueprints/UI/HUD5
-MRUItem8=/Game/Blueprints/UI/HUD4
-MRUItem9=/Game/Blueprints/UI/HUD3
-MRUItem10=/Game/Blueprints/UI/HUD
-MRUItem11=/Game/Blueprints/UI/HUD2
-MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem13=/Game/Blueprints/AOE_Decal
-MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem15=/Game/Blueprints/AO1E
-MRUItem16=/Game/Blueprints/LightPickupActor_Blueprint
-MRUItem17=/Game/Blueprints/AOE_Decal1
-MRUItem18=/Game/Blueprints/Mechanic_Test
-MRUItem19=/Game/Blueprints/UI/MainMenu
+MRUItem0=/Game/Blueprints/UI/CrosshairWid
+MRUItem1=/Game/Blueprints/UI/star-crosshair
+MRUItem2=/Game/Levels/Splash_screen
+MRUItem3=/Game/Blueprints/UI/Splash_screen
+MRUItem4=/Game/Levels/testYellow
+MRUItem5=/Game/Blueprints/UI/Pause
+MRUItem6=/Game/Levels/Forest
+MRUItem7=/Game/Blueprints/UI/HUD7
+MRUItem8=/Game/Blueprints/UI/HUD6
+MRUItem9=/Game/Blueprints/UI/HUD5
+MRUItem10=/Game/Blueprints/UI/HUD4
+MRUItem11=/Game/Blueprints/UI/HUD3
+MRUItem12=/Game/Blueprints/UI/HUD
+MRUItem13=/Game/Blueprints/UI/HUD2
+MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem15=/Game/Blueprints/AOE_Decal
+MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem17=/Game/Blueprints/AO1E
+MRUItem18=/Game/Blueprints/LightPickupActor_Blueprint
+MRUItem19=/Game/Blueprints/AOE_Decal1
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -2917,6 +2917,17 @@ Splash_screen_C.Tick=True
 Splash_screen_C.Replication=True
 Splash_screen_C.Input=True
 Splash_screen_C.Actor=True
+Splash_screen_C.Appearance=True
+Splash_screen_C.Designer=True
+Splash_screen_C.Interaction=True
+Splash_screen_C.Performance=True
+Splash_screen_C.Layout=True
+Splash_screen_C.Behavior=True
+Splash_screen_C.Render Transform=True
+Splash_screen_C.Accessibility=True
+Splash_screen_C.Clipping=True
+Splash_screen_C.Navigation=True
+Splash_screen_C.Localization=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2937,7 +2948,7 @@ ActorComponent=
 ActorComponent=
 Object=
 Object=
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 None=======
 None=======
 None=======
@@ -3022,8 +3033,8 @@ Mush_Gnome_C=
 Winter_Gnome_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[20]\" "
 ProjectileMovementComponent=
 MovementComponent=
@@ -3068,6 +3079,7 @@ HUD4_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Re
 HUD5_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD6_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD7_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Splash_screen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
@@ -3453,6 +3465,7 @@ None=======
 /Game/Blueprints/UI/HUD7.HUD7=0
 /Game/Blueprints/UI/Splash_screen.Splash_screen=0
 /Game/Levels/Splash_screen.Splash_screen:PersistentLevel.Splash_screen=0
+/Game/Blueprints/UI/star-crosshair.star-crosshair=1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
