--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1744,7 +1744,7 @@ MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Engine/Maps/Templates/Template_Default
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=MapCheck
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
