--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,7 +142,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -173,7 +173,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/Forest
@@ -1347,7 +1347,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=571.500 Y=0.000
-WindowSize=X=1335.000 Y=775.000
+WindowSize=X=1345.000 Y=785.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2220,6 +2220,8 @@ PlanarCut.TimeStamp=2021.02.05-04.38.49
 PlanarCut.LastCompileMethod=Unknown
 GooglePADEditor.TimeStamp=2021.02.05-04.40.07
 GooglePADEditor.LastCompileMethod=Unknown
+SourceControlWindows.TimeStamp=2021.02.05-04.34.23
+SourceControlWindows.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Levels/Forest
@@ -2236,7 +2238,7 @@ MRUItem10=/Game/Levels/Blue_paint
 MRUItem11=/Game/Levels/Blue_Paint_Test_Room
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=EditorErrors
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -2400,6 +2402,7 @@ BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
 
 [PlacementMode]
+RecentlyPlaced=/Game/Rocks/rock3/rock3_retop.rock3_retop;
 RecentlyPlaced=/Game/ParticleSystems/P_Fireflies.P_Fireflies;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_Effect_Fire.Blueprint_Effect_Fire;
 RecentlyPlaced=/Game/Materials/Mat_Fireflies.Mat_Fireflies;
@@ -2408,7 +2411,6 @@ RecentlyPlaced=/Game/Axe/mesh/Axe_Forest_Low.Axe_Forest_Low;
 RecentlyPlaced=/Game/Logs/Log1/Log1_Forest_Low.Log1_Forest_Low;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/Rocks/rock3/rock3_retop.rock3_retop;
 RecentlyPlaced=/Game/Rocks/rock2/rock2_Retop.rock2_Retop;
 RecentlyPlaced=/Game/Rocks/rock4/rock4_retopo.rock4_retopo;
 RecentlyPlaced=/Game/Rocks/rock1/rock1_retop_Uv.rock1_retop_Uv;
