--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/SourceControlSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/SourceControlSettings.ini
@@ -1,5 +1,5 @@
 [SourceControl.SourceControlSettings]
-Provider=None
+Provider=Git
 
 [SubversionSourceControl.SubversionSourceControlSettings]
 Repository="https://18.216.236.46:443/svn/Serotopia/"
