Revert "Source control tech support part 2"
This reverts commit ead91ccd4f607a411298e16aca896bbae2e66bdc.

--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,9 +78,9 @@ ServerFixedFPS=0
 LastSize=(X=0,Y=0)
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Splash_screen
-MRUItem2=/Game/Levels/testYellow
+MRUItem0=/Game/Levels/Splash_screen
+MRUItem1=/Game/Levels/testYellow
+MRUItem2=/Game/Levels/Forest
 MRUItem3=/Game/Levels/Bubbleopolis
 MRUItem4=/Game/Levels/Blue_paint
 MRUItem5=/Game/Levels/Puzzle_Chain_Test_1
@@ -310,7 +310,7 @@ LastLevel=/Game/Levels/Forest
 LastLevel=/Game/Levels/MainMenu
 LastLevel=/Game/Levels/TowerInterior
 LastLevel=/Game/Levels/MainMenu
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/Splash_screen
 None=======
 None=======
 None=======
@@ -319,13 +319,13 @@ None=======
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Splash_screen
-MRUItem2=/Game/Levels/testYellow
-MRUItem3=/Game/Blueprints/UI/Pause
-MRUItem4=/Game/Blueprints/UI/CrosshairWid
-MRUItem5=/Game/Blueprints/UI/star-crosshair
-MRUItem6=/Game/Blueprints/UI/Splash_screen
+MRUItem0=/Game/Levels/Splash_screen
+MRUItem1=/Game/Levels/testYellow
+MRUItem2=/Game/Blueprints/UI/Pause
+MRUItem3=/Game/Blueprints/UI/CrosshairWid
+MRUItem4=/Game/Blueprints/UI/star-crosshair
+MRUItem5=/Game/Blueprints/UI/Splash_screen
+MRUItem6=/Game/Levels/Forest
 MRUItem7=/Game/Blueprints/UI/HUD7
 MRUItem8=/Game/Blueprints/UI/HUD6
 MRUItem9=/Game/Blueprints/UI/HUD5
@@ -4466,7 +4466,7 @@ ExtrudeCoordsWarning=False
 Warning_EditingDefaultMaterial=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
