--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/SourceControlSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/SourceControlSettings.ini
@@ -1,9 +1,7 @@
 [SourceControl.SourceControlSettings]
-<<<<<<< HEAD
 Provider=None
-=======
 Provider=Git
->>>>>>> main
+None=======
 
 [SubversionSourceControl.SubversionSourceControlSettings]
 Repository="https://18.216.236.46:443/svn/Serotopia/"
