moving casey's things over
hopefully casey's assets and changes are transferred over now. will almost certainly need some quick hooking up

--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ Advanced=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/AOE/Splatter
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -168,13 +168,13 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.180000
+ContentBrowserTab1.ThumbnailSizeScale=0.013100
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Bubbleopolis
+LastLevel=/Game/Levels/Splash_screen
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -186,26 +186,26 @@ ToolbarOpenBPClass.CurrentViewType=0
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem4=/Game/Logs/Log2/Log2
-MRUItem5=/Game/Rocks/Flat_Boy_Rock__low_
-MRUItem6=/Game/Levels/NewWorld
-MRUItem7=/Game/Levels/Green_Paint
-MRUItem8=/Game/WindowStructure
-MRUItem9=/Game/Levels/NewMap
-MRUItem10=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem11=/Game/Levels/MainMenu
-MRUItem12=/Game/Blueprints/AOE/Splatter/AOE_Decal
-MRUItem13=/Game/Levels/TechDemo
-MRUItem14=/Game/Levels/RedTesting
-MRUItem15=/Game/Levels/Magenta_Test_Room
-MRUItem16=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem17=/Game/Materials/Mat_CloudDeck
-MRUItem18=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
-MRUItem19=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Stones_R
+MRUItem0=/Game/Blueprints/AOE/Splatter/AOE_Decal
+MRUItem1=/Game/Levels/Splash_screen
+MRUItem2=/Game/Bubble_House2/BH-Variation_2/mesh/Bubble_House_Combined
+MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem4=/Game/Levels/Forest
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem6=/Game/Logs/Log2/Log2
+MRUItem7=/Game/Rocks/Flat_Boy_Rock__low_
+MRUItem8=/Game/Levels/NewWorld
+MRUItem9=/Game/Levels/Green_Paint
+MRUItem10=/Game/WindowStructure
+MRUItem11=/Game/Levels/NewMap
+MRUItem12=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem13=/Game/Levels/MainMenu
+MRUItem14=/Game/Levels/TechDemo
+MRUItem15=/Game/Levels/RedTesting
+MRUItem16=/Game/Levels/Magenta_Test_Room
+MRUItem17=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem18=/Game/Materials/Mat_CloudDeck
+MRUItem19=/Game/Drawbridge/Drawbridge_non-animated_part_Bridge_LP_Combined_Inside_bridge_piece
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1194,6 +1194,10 @@ Blueprint_Effect_Fire_C.Collision=True
 Blueprint_Effect_Fire_C.Input=True
 Blueprint_Effect_Fire_C.Actor=True
 Emitter.Navigation=True
+K2Node_Timeline.GraphNodeDetail=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -1395,7 +1399,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=571.500 Y=0.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1350.000 Y=790.000
+WindowSize=X=1360.000 Y=800.000
 None=======
 InitiallyMaximized=True
 
@@ -2821,8 +2825,8 @@ SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2021.02.03-03.51.48
 HierarchicalLODOutliner.TimeStamp=2021.02.05-04.34.15
 HierarchicalLODOutliner.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2021.01.28-02.42.41
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.02.05-04.34.10
+BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2021.01.28-02.42.50
 SequencerWidgets.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2021.01.28-02.42.44
@@ -2963,18 +2967,18 @@ GooglePADEditor.TimeStamp=2021.02.05-04.40.07
 GooglePADEditor.LastCompileMethod=External
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/NewWorld
-MRUItem3=/Game/Levels/Green_Paint
-MRUItem4=/Game/Levels/NewMap
-MRUItem5=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem6=/Game/Levels/MainMenu
-MRUItem7=/Game/Levels/TechDemo
-MRUItem8=/Game/Levels/RedTesting
-MRUItem9=/Game/Levels/Magenta_Test_Room
-MRUItem10=/Game/Levels/Blue_paint
-MRUItem11=/Game/Levels/Blue_Paint_Test_Room
+MRUItem0=/Game/Levels/Splash_screen
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Levels/NewWorld
+MRUItem4=/Game/Levels/Green_Paint
+MRUItem5=/Game/Levels/NewMap
+MRUItem6=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem7=/Game/Levels/MainMenu
+MRUItem8=/Game/Levels/TechDemo
+MRUItem9=/Game/Levels/RedTesting
+MRUItem10=/Game/Levels/Magenta_Test_Room
+MRUItem11=/Game/Levels/Blue_paint
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -3424,4 +3428,40 @@ bMaterialQualityUsed[2]=0
 InstalledPlugins=RigLogic
 InstalledPlugins=XRVisualization
 None=======
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
