--- a/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -68,20 +68,22 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 bUseNonRealtimeAudioDevice=False
-NewWindowPosition=(X=320,Y=160)
+NewWindowPosition=(X=1912,Y=-8)
 bLaunchSeparateServer=False
 bShowServerDebugDrawingByDefault=True
 ServerDebugDrawingColorTintStrength=0.000000
 ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
-LastSize=(X=1280,Y=720)
+LastSize=(X=1440,Y=836)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
-MultipleInstancePositions=(X=320,Y=160)
+MultipleInstancePositions=(X=1912,Y=-8)
+NewWindowWidth=1440
+NewWindowHeight=836
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Forest
 MRUItem2=/Game/Levels/Blue_paint
 MRUItem3=/Game/Levels/testYellow
 MRUItem4=/Game/Levels/Puzzle_Chain_Test_1
@@ -237,6 +239,7 @@ BluePaintPickup_Actor_C=
 Door4_BluePrint_C=
 StreetlampBP_C=
 TestLevels_C=
+BrushComponent=
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -312,36 +315,35 @@ LastLevel=/Game/Levels/Forest
 LastLevel=/Game/Levels/MainMenu
 LastLevel=/Game/Levels/TowerInterior
 LastLevel=/Game/Levels/MainMenu
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 None=======
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Materials/Mat_ToonShade.Mat_ToonShade
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Mat_ToonShade
-MRUItem1=/Game/Gnomes/Gnome_Spring_Low_Poly
-MRUItem2=/Game/Materials/Mat_ToonShade_Inst
-MRUItem3=/Game/Materials/Mat_Cel_Inst
-MRUItem4=/Game/Levels/Forest
-MRUItem5=/Game/Materials/Mat_Water
-MRUItem6=/Game/Materials/Mat_VFXShockwave
-MRUItem7=/Game/ParticleSystems/VFX_ColorShockwave_Blueprint
-MRUItem8=/Game/Blueprints/SceneFinish_Actor
-MRUItem9=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem10=/Game/Materials/Mat_Leaves
-MRUItem11=/Game/Materials/Mat_Leaf_Diffuse
-MRUItem12=/Game/Texture/T_Leaf_D
-MRUItem13=/Game/ParticleSystems/Footprint
-MRUItem14=/Engine/BasicShapes/Mat_VFXShockwave
-MRUItem15=/Game/Blueprints/Staircase
-MRUItem16=/Game/Blueprints/StaircaseBP
-MRUItem17=/Game/Materials/Mat_Stairs
-MRUItem18=/Game/Levels/Bubbleopolis
-MRUItem19=/Game/Blueprints/AOE_Decal
+MRUItem0=/Game/Materials/Mat_ToonShade_BubbleInst
+MRUItem1=/Game/Materials/Mat_ToonShade_Inst
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/Materials/Mat_ToonShade
+MRUItem4=/Game/Gnomes/Gnome_Spring_Low_Poly
+MRUItem5=/Game/Materials/Mat_Cel_Inst
+MRUItem6=/Game/Levels/Forest
+MRUItem7=/Game/Materials/Mat_Water
+MRUItem8=/Game/Materials/Mat_VFXShockwave
+MRUItem9=/Game/ParticleSystems/VFX_ColorShockwave_Blueprint
+MRUItem10=/Game/Blueprints/SceneFinish_Actor
+MRUItem11=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem12=/Game/Materials/Mat_Leaves
+MRUItem13=/Game/Materials/Mat_Leaf_Diffuse
+MRUItem14=/Game/Texture/T_Leaf_D
+MRUItem15=/Game/ParticleSystems/Footprint
+MRUItem16=/Engine/BasicShapes/Mat_VFXShockwave
+MRUItem17=/Game/Blueprints/Staircase
+MRUItem18=/Game/Blueprints/StaircaseBP
+MRUItem19=/Game/Materials/Mat_Stairs
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -2849,7 +2851,7 @@ PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 
 [DetailPropertyExpansion]
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2867,7 +2869,7 @@ ActorComponent=
 ActorComponent=
 Object=
 Object=
-Object="\"Object.Lightmass.LightmassSettings\" "
+Object=
 None=======
 None=======
 None=======
@@ -2879,7 +2881,7 @@ ShapeComponent=
 ShapeComponent=
 PreviewMaterial="\"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Lightmass.LightmassSettings\" "
-MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
+MaterialInterface=
 StaticMeshActor=
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 GeomModifier_Extrude="\"Object.Settings\" "
@@ -2889,7 +2891,7 @@ GeomModifier_Pen="\"Object.Settings\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.ImportSettings.AssetImportData.Object.Transform.ImportTranslation\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportTranslation\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
@@ -3373,6 +3375,7 @@ None=======
 /Game/Materials/Mat_VFXShockwave.Mat_VFXShockwave=1
 /Game/Materials/Mat_Cel_Inst.Mat_Cel_Inst=1
 /Game/Gnomes/Gnome_Spring_Low_Poly.Gnome_Spring_Low_Poly=1
+/Game/Materials/Mat_ToonShade_BubbleInst.Mat_ToonShade_BubbleInst=1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -4377,12 +4380,11 @@ Warning_CompileErrorsInMaterial=False
 Warning_NoPreviewMeshFound=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [LightingBuildOptions]
 QualityLevel=3
@@ -4695,8 +4697,8 @@ bFilterBSP=False
 
 [MaterialInstanceEditor]
 bShowGrid=False
-bDrawGrid=True
-PrimType=0
+bDrawGrid=False
+PrimType=1
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
